--- a/index.html
+++ b/index.html
@@ -23,22 +23,26 @@
   <body>
     <div class="wrapper">
       <section class="flexed">
-        <video id="background_video" loop muted></video>
+        <video id="background_video" loop muted></video>pro
         <div id="video_cover"></div>
         <div class="content">
           <h1>HI, I'M KARTIK</h1>
           <h6>web developer</h6>
-          <p class="pc-only">Press right to scroll <i class="fas fa-arrow-right "></i></p>
-          <i class="fas fa-arrow-right mobile-only"></i>
+          <p class="pc-only">
+            Press right to scroll <i class="fas fa-arrow-right"></i>
+          </p>
+          <a href="#pg-3" class="arrow">
+            <i class="fas fa-arrow-right mobile-only"></i>
+          </a>
         </div>
       </section>
-      <section class="pg-3">
+      <section class="pg-3" id="pg-3">
         <h1>ABOUT ME</h1>
         <div class="row">
           <div class="col-lg-4 col-md-10 col-sm-12">
             <img src="./images/img.jpg" alt="profile-picture" />
           </div>
-          <div class="col-lg-8">
+          <div class="col-lg-8 info-text">
             <p>
               An organized, passionate, and bubbly individual. I will be there
               for you in any situation and will provide the best solutions. I am
