fixed minor issues

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
   <body>
     <div class="wrapper">
       <section class="flexed">
-        <video id="background_video" loop muted></video>pro
+        <video id="background_video" loop muted></video>
         <div id="video_cover"></div>
         <div class="content">
           <h1>HI, I'M KARTIK</h1>
